fix the gap for hamburger nav

--- a/client/src/scss/components/_Nav.scss
+++ b/client/src/scss/components/_Nav.scss
@@ -136,44 +136,44 @@
           display: none;
         }
       }
-      // .hamburger-react {
-      //   display: flex;
-      //   right: 10%;
-      // }
-      // .nav-links {
-      //   height: 60%;
-      //   width: 100%;
-      //   display: flex;
-      //   flex-direction: column;
-      //   position: fixed;
-      //   justify-content: space-evenly;
-      //   align-items: center;
-      //   top: 13%;
-      //   border-radius: 0.5em;
-      //   background-color: $main;
-      //   right: 0%;
-      //   opacity: 1;
-      //   transition: opacity 400ms ease;
-      //   .link {
-      //     margin: 0em;
-      //     color: $white;
-      //     font-size: 1.5em;
-      //     &.active {
-      //       background-color: transparent;
-      //       text-decoration: underline 2px $white;
-      //       text-underline-offset: 0.5em;
-      //       transition: 300ms ease;
-      //       cursor: pointer;
-      //     }
-      //   }
-      //   &.closed {
-      //     .hamburger {
-      //       transform: none;
-      //     }
-      //     opacity: 0;
-      //     display: none;
-      //   }
-      // }
+      .hamburger-react {
+        display: flex;
+        right: 10%;
+      }
+      .nav-links {
+        height: 60%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        justify-content: space-evenly;
+        align-items: center;
+        top: 10%;
+        border-radius: 0.5em;
+        background-color: $main;
+        right: 0%;
+        opacity: 1;
+        transition: opacity 400ms ease;
+        .link {
+          margin: 0em;
+          color: $white;
+          font-size: 1.5em;
+          &.active {
+            background-color: transparent;
+            text-decoration: underline 2px $white;
+            text-underline-offset: 0.5em;
+            transition: 300ms ease;
+            cursor: pointer;
+          }
+        }
+        &.closed {
+          .hamburger {
+            transform: none;
+          }
+          opacity: 0;
+          display: none;
+        }
+      }
     }
   }
 }
